# jpx-tokyo-stock-exchange-prediction

./: .gitignore  misc.md  pyproject.toml  readme.md
data-analysis/: readme.md  research.ipynb
experiments/light_gbm/2022-05-15 16:39:20.494054/: features.txt  submit-light_gbm.csv
features/: date.py  raw_features.py  sector_code_17.py  sector_code_33.py  volatility.py
models/: lgbm_regressor.py  raw_data.py  utils.py
predictions/: readme.md
predictions/experiments/light_gbm/2022-05-13 00:43:22.406545/: light_lgbm_pickle.pkl  metrics.txt
predictions/experiments/light_gbm/2022-05-15 15:28:27.801840/: light_gbm_pickle.pkl
predictions/experiments/light_gbm/2022-05-15 16:41:17.628800/: metrics.txt
predictions/experiments/light_gbm/2022-06-12 21:59:23.115606/: light_gbm_pickle.pkl
predictions/experiments/light_gbm/2022-06-12 22:05:07.676005/: features.txt  light_gbm_pickle.pkl
predictions/experiments/light_gbm/2022-06-13 00:38:47.530849/: light_gbm_pickle.pkl
predictions/experiments/light_gbm/2022-06-13 00:42:20.763356/: light_gbm_pickle.pkl
predictions/experiments/light_gbm/2022-06-13 00:42:59.788981/: light_gbm_pickle.pkl
predictions/features/: date.py  roi.py  sector_code_17.py  sector_code_33.py  volatility.py
predictions/models/: base.py  lgbm_regressor.py  utils.py
