[tool.poetry]
name = "jpx-tokyo-stock-exchange-prediction"
version = "0.1.0"
description = ""
authors = ["nbuzzano <nicolas.buzzano@muttdata.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
tabview = "^1.4.4"
numpy = "^1.22.3"
pandas = "^1.4.2"
lightgbm = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
